SFUSA/force-app/main/default/objects/Consumer_Articles__kav/fields/Body_Email__c.field-meta.xml
<CustomField>
        <fullName>Body_Email__c</fullName>
        <label>Body Email</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>