SFUSA/force-app/main/default/objects/Consumer_Articles__kav/fields/Body_Facebook__c.field-meta.xml
<CustomField>
        <fullName>Body_Facebook__c</fullName>
        <label>Body Facebook</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>