SFUSA/force-app/main/default/objects/Consumer_Articles__kav/fields/Body_Phone__c.field-meta.xml
<CustomField>
        <fullName>Body_Phone__c</fullName>
        <label>Body Phone</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>