SFUSA/force-app/main/default/objects/Consumer_Articles__kav/fields/Body_Private__c.field-meta.xml
<CustomField>
        <fullName>Body_Private__c</fullName>
        <label>Body Private</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>