SFUSA/force-app/main/default/objects/Consumer_Articles__kav/fields/Body_qna__c.field-meta.xml
<CustomField>
        <fullName>Body_qna__c</fullName>
        <label>Body qna</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>