SFUSA/force-app/main/default/objects/Consumer_Articles__kav/fields/Body_qna_Auto__c.field-meta.xml
<CustomField>
        <fullName>Body_qna_Auto__c</fullName>
        <label>Body qna Auto</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>