SFUSA/force-app/main/default/objects/Consumer_Articles__kav/fields/Body_Text__c.field-meta.xml
<CustomField>
        <fullName>Body_Text__c</fullName>
        <label>Body Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>