SFUSA/force-app/main/default/objects/Consumer_Articles__kav/fields/Body_Web_Callback__c.field-meta.xml
<CustomField>
        <fullName>Body_Web_Callback__c</fullName>
        <label>Body Web Callback</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </CustomField>