SFUSA/force-app/main/default/objects/Consumer_Articles__kav/fields/Body_Web_Callback_Auto__c.field-meta.xml
<CustomField>
        <fullName>Body_Web_Callback_Auto__c</fullName>
        <label>Body Web Callback Auto</label>
        <type>TextArea</type>
    </CustomField>