SFUSA/force-app/main/default/objects/Consumer_Articles__kav/fields/Rating_Score__c.field-meta.xml
<CustomField>
        <fullName>Rating_Score__c</fullName>
        <label>Rating Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>